# beep-filler

./: .env.example  .gitignore  Cargo.toml  README.md  config.json
src/: config.rs  event.rs  executor.rs  forex_providers.rs  main.rs  price_providers.rs  types.rs
