[package]
name = "beep-filler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beep-filler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc"] }
tendermint = "0.34"
tendermint-rpc = { version = "0.34", features = ["http-client", "websocket-client"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
tokio-stream = "0.1"
dashmap = "6.1.0"
sha2 = "0.10.9"
bip32 = "0.5"
cosmwasm-std = "2.2.2"
schemars = "0.8.22"
